src/main/java/com/example/nya_shopping/controller/error/CustomAccessDeniedHandler.java
package com.example.nya_shopping.controller.error;

import jakarta.servlet.http.HttpServletRequest;
import jakarta.servlet.http.HttpServletResponse;
import org.springframework.security.access.AccessDeniedException;
import org.springframework.security.web.access.AccessDeniedHandler;
import org.springframework.stereotype.Component;

import java.io.IOException;

import static com.example.nya_shopping.validation.ErrorMessage.E0034;

@Component
public class CustomAccessDeniedHandler implements AccessDeniedHandler {

    @Override
    public void handle(HttpServletRequest request,
                       HttpServletResponse response,
                       AccessDeniedException accessDeniedException) throws IOException {
        request.getSession().setAttribute("errorMessage", E0034);
        response.sendRedirect("/");
    }
}